assets/css/cart.css
.opener {
  text-align: center;
  font-size: 25px;
  padding: 60px;
}
/* Phone */
.main {
  display: grid;
  grid-template-columns: 1fr;
  place-items: left;
  background-color: #edf0ee;
}

h3 {
  background-image: linear-gradient(to right, #00493a, #00735c);
  text-align: center;
  padding-top: 25px;
  padding-bottom: 25px;
  color: white;
}

.accepted{
  text-align: center;
}
/* Cart Form */


.billing {
  display: grid;
  grid-template-columns: 1fr;
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
  text-align: center;
}


.information {
  border-radius: 5px;
  padding: 80px 100px 125px;
}

/* Tablet and up */
@media (min-width: 768px) {

  .information {
    border-radius: 5px;
    padding: 80px 250px 100px;
  }
}

/* Desktop and up */
@media (min-width: 992px) {

  .information {
    border-radius: 5px;
    padding: 80px 300px 100px;
  }
}

/*Order Button*/

.btn {
  background-color: white;
  color: black;
  border: 2px solid #00493a;
  padding: 16px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-family: 'Ruluko', sans-serif;
  font-size: 20px;
}

.btn:hover {
  background-color: #00493a;
  color: #ffffff;
}

.btn-container {
  text-align: center;
  padding: 40px;
}

/*Tablet and up*/

@media (min-width: 768px) {
  .billing {
    grid-template-columns: 1fr 1fr;
  }

  .order-item p {
    font-size: 24px;
  }
}

/* Desktop and up*/
@media (min-width: 1440px) {
  .billing {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

